[package]
name = "devtunes"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.17"
ratatui = { version = "0.24", features = ["all-widgets"] }
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
google-generative-ai-rs = { version = "0.3.0", features = ["beta"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
